test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-shared-from-oknil-borrowed.good
init-field-dflt-oknil-shared-from-oknil-borrowed.chpl:11: error: cannot initialize 'shared MyClass?' from a 'borrowed MyClass?'
